--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -1,14 +1,7 @@
-.logo{
-    height: 56px;
+header{
     display: flex;
+    flex-direction: row;
     align-items: center;
     background-color: #212529;
-}
 
-.logo__name{
-    color: white;
-    margin-left: 150px;
-    text-decoration: none;
-    font-size: 25px;
 }
-
