--- a/assets/style/_nav.scss
+++ b/assets/style/_nav.scss
@@ -22,7 +22,7 @@
     top: 0;
     padding: 0.5em;
     background: none;
-    color: rgb(255, 255, 255);
+    color: #7291c0;
     cursor: pointer;
     font-size: 1.7em;
     line-height: 1;
@@ -93,6 +93,7 @@
 .nav > ul > li > a:hover,
 .nav > ul > li > a:focus {
     color: #0a58ca;
+    padding-left: 10px;
 }
 
 
