--- a/backend/eicview_web/templates/index.html
+++ b/backend/eicview_web/templates/index.html
@@ -6,24 +6,22 @@
     <h1>Hello, world!</h1>
     <table>
         <tr>
-            <td>name</td>
-            <td>value</td>
+            <td>file_quantity</td>
+            <td>{{ file_quantity  }}</td>
         </tr>
         <tr>
-            <td>test_int</td>
-            <td>{{ test_int  }}</td>
+            <td>file_size</td>
+            <td>{{ file_size  }}</td>
         </tr>
         <tr>
-            <td>test_str</td>
-            <td>{{ test_str }}</td>
+            <td>dir_quantity</td>
+            <td>{{ dir_quantity  }}</td>
         </tr>
-        {% for array_item in test_array %}
         <tr>
-            <td>test_array</td>
-            <td>{{ array_item }}</td>
+            <td>average_folder_size</td>
+            <td>{{ average_folder_size  }}</td>
         </tr>
-        {% endfor %}
-
+        
     </table>
 
         <!-- end of block content -->
